Fix CSS of generic app icons

--- a/styles/singleApp.module.scss
+++ b/styles/singleApp.module.scss
@@ -385,6 +385,11 @@
     }
 }
 
+.noIcon{
+    margin-right: 10px;
+    user-select: none;
+}
+
 .noBorder{
     border: 0px;
     padding: 15px !important;
