--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -28,3 +28,10 @@ p.lead {
         }
     }
 }
+
+h4.commentsHeader {
+    font-size: 20px;
+    margin-top: 40px;
+    margin-bottom: 5px;
+    opacity: 0.75;
+}
